@@ -32,6 +32,7 @@ H.Merijn Brand			<h.m.brand@xs4all.nl>
 Hugo van der Sanden		<hv@crypt.org>
 Inaba Hiroto			<inaba@st.rim.or.jp>
 Jarkko Hietaniemi		<jhi@iki.fi>
+Jesse Vincent			<jesse@fsck.com>
 Jungshik Shin			<jshin@mailaps.org>
 KONNO Hiroharu			<hiroharu.konno@bowneglobal.co.jp>
 Laszlo Molnar			<ml1050@freemail.hu>
