@@ -1,8 +1,4 @@
 BEGIN {
-    if ( $ENV{'PERL_CORE'} && $] >= 5.011) {
-        chdir 't';
-        unshift @INC, '../lib';
-    }
     require Config; import Config;
     if ($Config{'extensions'} !~ /\bEncode\b/) {
       print "1..0 # Skip: Encode was not built\n";
