@@ -1,6 +1,10 @@
 # Revision history for Perl extension Encode.
 #
 # $Id: Changes,v 2.38 2009/11/16 14:08:13 dankogai Exp dankogai $
+! t/CJKT.t t/guess.t t/perlio.t
+  $ENV{'PERL_CORE'} tricks removed since they are no longer necessary.
+  Message-Id: <20091116161513.GA25556@bestpractical.com>
+
 $Revision: 2.38 $ $Date: 2009/11/16 14:08:13 $
 ! Encode.xs
   Addressed: Encode memory corruption [perl #70528]
